--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-欢迎到来！我是loser！
+<!doctype html>
+<html>
+<head>
+<meta charset='UTF-8'>
+<meta name="keywords" content="关键字">
+<meta name="description" content="网页模板">
+<meta http-equia='refresh' content="秒; [url=网址]"/>
+<title>模板</title>
+<style>
+div{width:300px;
+    height:300px;
+  background-color:blue;}
+</style>
+</head>
+<body>
+  <div></div>
+<script>
+    
+</script>
+</body>
+</html>
