--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="关键字">
 <meta name="description" content="网页模板">
 <meta http-equia='refresh' content="秒; [url=网址]"/>
-<title>模板</title>
+<title>loser的网页</title>
 <style>
 div{width:300px;
     height:300px;
