--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 <meta http-equia='refresh' content="秒; [url=网址]"/>
 <title>loser的网页</title>
 <style>
-div{width:300px;
+#tx{width:300px;
     height:300px;
-  background-color:blue;}
+  background:url('5c2837e9bd766.jpg') no-repeat;
+    background-size:cover;}
 </style>
 </head>
 <body>
-  <div></div>
+  <div id="tx"></div>
 <script>
     
 </script>
