--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <style>
 #tx{width:300px;
     height:300px;
-  background:url('5c2837e9bd766.jpg') no-repeat;
-    background-size:cover;}
+  }
 </style>
 </head>
 <body>
-  <div id="tx"></div>
+  <div id="tx"><img src='5c2837e9bd766.jpg'></div>
 <script>
     
 </script>
